--- a/src/main/resources/assets/gcys/lang/en_us.lang
+++ b/src/main/resources/assets/gcys/lang/en_us.lang
@@ -409,6 +409,9 @@ gcys.multiblock.turbomolecular_pump.tooltip.1=Decreases pressure by §b%sPa/s§7
 gcys.multiblock.turbomolecular_pump.tooltip.2=Consumes §e%sL/s§7 Lubricant when decreasing pressure.
 gcys.multiblock.turbomolecular_pump.tooltip.3=Uses %s§7 power. Does not overclock.
 
+# GreenHouse
+gcys.multiblock.greenhouse.sensor_type.speed=Processing Speed: %s
+
 # Single Block Machines
 
 gcys.machine.dryer.lv.name=Basic Dryer
